listas las mejoras

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Platzriv - Juego de carreras y calaveras</title>
 </head>
 <body>
+    <div id="cartelPerder" class="ocultar">
+        <h1>Perdiste! </h1>
+        <p><span id="carita-triste">🥺</span></p>
+        
+    </div>
+    <div id="cartelGanar" class="ocultar">
+        <h1>Terminaste! </h1>
+        <p><span id="trofeo">🍺</span></p>
+        <p id="mensaje-record">tu record es de </p>
+        <p id="puntuacion">tiempo: hola</p>
+    </div>
     <div class="game-container">
         <canvas id="game"></canvas>
 
